[B] Fix visibility bug with Project Collection placeholder

--- a/client/src/theme/Components/backend/project-collection/_wrapper.scss
+++ b/client/src/theme/Components/backend/project-collection/_wrapper.scss
@@ -15,6 +15,15 @@
     }
   }
 
+  &.empty .backend-panel > .container {
+    @include respond(#{$break75 - 1}, max) {
+      .panel {
+        visibility: visible;
+        opacity: 1;
+      }
+    }
+  }
+
   .backend-panel {
     > .container {
       padding-top: 0;
